--- a/templates/neo4j_user_phone.html
+++ b/templates/neo4j_user_phone.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>空间密度聚类查询</title>
+  <title>关联网络查询</title>
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<br><p>用户注册与紧急联系人关联-订单详情</p><br>
+<br><p>关系关联-订单详情</p><br>
 
 <form method="get" action="{{ url_for('gps_label_query') }}" >
         返回查询页
